Bug #5853
pfexec_call() error handling could be improved
Start date:
2015-04-17
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Right now pfexec_call()'s default error is negative one. However, callers are expecting errnos or zero. In addition, there's another case where we're supposed to be checking the alignment of two different offsets, pfr_loff and pfr_ioff, but end up checking pfr_loff twice.
Updated by Electric Monk almost 6 years ago
- Status changed from Pending RTI to Closed
git commit b01b59e369b297df1b370a7ef94d2b9230d04452
commit b01b59e369b297df1b370a7ef94d2b9230d04452 Author: Robert Mustacchi <rm@joyent.com> Date: 2015-04-17T17:10:38.000Z 5853 pfexec_call() error handling could be improved 5854 pfexecd should initialize pfexec response buffers Reviewed by: Jerry Jelinek <jerry.jelinek@joyent.com> Reviewed by: Richard Lowe <richlowe@richlowe.net> Reviewed by: Dan McDonald <danmcd@omniti.com> Reviewed by: Steven Williamson <steve@freeagent.com> Approved by: Garrett D'Amore <garrett@damore.org>