5853 pfexec_call() error handling could be improved 5854 pfexecd should initialize pfexec response buffers Reviewed by: Jerry Jelinek <jerry.jelinek@joyent.com> Reviewed by: Richard Lowe <richlowe@richlowe.net> Reviewed by: Dan McDonald <danmcd@omniti.com> Reviewed by: Steven Williamson <steve@freeagent.com> Approved by: Garrett D'Amore <garrett@damore.org>